Implement custom resources for users
* Enable user api if api service is registered and standard authservice is used
* Reconnect to keycloak for each API call
* Set creation timestamp and selfLink
* Move keycloak-specific code into its own module
* Use user api in keycloak controller for creating users
